fixed header on work page by removing full style sheet import

--- a/style.css
+++ b/style.css
@@ -201,90 +201,92 @@ header {
 .w3-display-container {
     font-family: 'Roboto', 'serif';
 }
-  
+
+.w3-display-container:hover .w3-display-hover {
+    display:block;
+}
+
+.w3-display-container:hover span.w3-display-hover {
+    display:inline-block;
+}
+
+.w3-tooltip,.w3-display-container{position:relative}.w3-tooltip .w3-text{display:none}.w3-tooltip:hover .w3-text{display:inline-block}
+.w3-display-container:hover .w3-display-hover{display:block}.w3-display-container:hover span.w3-display-hover{display:inline-block}.w3-display-hover{display:none}
+.w3-tooltip,.w3-display-container{position:relative}.w3-tooltip .w3-text{display:none}.w3-tooltip:hover .w3-text{display:inline-block}
+
+.w3-content,
+.w3-auto {
+    margin-left:auto;
+    margin-right:auto;
+}
+        
+.w3-content {
+    max-width:980px;
+}
+
+.w3-auto {
+    max-width:1140px;
+}
+
+.w3-display-hover {
+    display:none;
+}
+
+.w3-black,.w3-hover-black:hover {
+    color: #fff !important;
+    background-color: #000 !important;
+}
+
+.w3-display-left {
+    position: absolute;
+    top: 50%;
+    left: 0%;
+    transform: translate(0%,-50%);
+    -ms-transform: translate(-0%,-50%);
+}
+
+.w3-display-right {
+    position: absolute;
+    top: 50%;
+    right: 0%;
+    transform: translate(0%,-50%);
+    -ms-transform: translate(0%,-50%);
+}
+
+
+
+/* arrow buttons on work slide show */
+
+.w3-btn,.w3-button{border:none;display:inline-block;padding:8px 16px;vertical-align:middle;overflow:hidden;text-decoration:none;color:inherit;background-color:inherit;text-align:center;cursor:pointer;white-space:nowrap}
+.w3-btn,.w3-button{-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}   
+.w3-disabled,.w3-btn:disabled,.w3-button:disabled{cursor:not-allowed;opacity:0.3}.w3-disabled *,:disabled *{pointer-events:none}
+.w3-dropdown-hover:hover > .w3-button:first-child,.w3-dropdown-click:hover > .w3-button:first-child{background-color:#ccc;color:#000}
+.w3-bar-block .w3-dropdown-hover .w3-button,.w3-bar-block .w3-dropdown-click .w3-button{width:100%;text-align:left;padding:8px 16px}
+.w3-bar .w3-button{white-space:normal}
+.w3-dropdown-hover.w3-mobile,.w3-dropdown-hover.w3-mobile .w3-btn,.w3-dropdown-hover.w3-mobile .w3-button,.w3-dropdown-click.w3-mobile,.w3-dropdown-click.w3-mobile .w3-btn,.w3-dropdown-click.w3-mobile .w3-button{width:100%}
+.w3-button:hover{color:#000!important;background-color:#ccc!important}
+
+ 
+
+/* website text box */
+
+
+
+.w3-display-bottomleft{position:absolute;left:0;bottom:0}.w3-display-bottomright{position:absolute;right:0;bottom:0}
+.w3-tiny{font-size:10px!important}.w3-small{font-size:12px!important}.w3-medium{font-size:15px!important}.w3-large{font-size:18px!important}
+.w3-container,.w3-panel{padding:0.01em 16px}.w3-panel{margin-top:16px;margin-bottom:16px}
+.w3-container:after,.w3-container:before,.w3-panel:after,.w3-panel:before,.w3-row:after,.w3-row:before,.w3-row-padding:after,.w3-row-padding:before,
+.w3-cell-row:before,.w3-cell-row:after,.w3-clear:after,.w3-clear:before,.w3-bar:before,.w3-bar:after{content:"";display:table;clear:both}
+.w3-container,.w3-panel{padding:0.01em 16px}.w3-panel{margin-top:16px;margin-bottom:16px}
+.w3-padding-16{padding-top:16px!important;padding-bottom:16px!important}.w3-padding-24{padding-top:24px!important;padding-bottom:24px!important}
+.w3-black,.w3-hover-black:hover{color:#fff!important;background-color:#000!important}
+
 
 
 
     /* work.html */
 
-    /* contact.html */
+
 
 
     
-
-.form-container {  
-    width: 100%;
-    margin: 0 auto;
-    text-align: left;
-}
-
-#myform {
-    padding-top: 3rem;
-    padding-bottom: 3rem;
-    padding-right: 3rem;
-}
-
-.form-element {
-    padding-top: 1rem;
-}
-
-input {
-    width: 14.5rem;
-    height: 1.75rem;
-    font-size: 1.125rem;
-    background-color: white;
-    border-radius: .5rem;
-}
-
-label {
-    font-size: 1.25rem;
-}
-
-textarea  {
-    font-size: 1.125rem;
-    max-width: 500px;
-    font-family: 'Roboto', 'sans-serif';
-    background-color: white;
-    border-radius: 0.5rem;
-}
-
-.form-field {
-    margin-top: .5rem;    
-}
-
-.contact-btn-container {
-    margin-bottom: 2rem;
-}
-
-input:focus {
-    outline-color: #D0312D;
-}
-
-textarea:focus {
-    outline-color: #D0312D;
-}
-
-.inverse-contact-btn {
-    margin-top: 2rem;
-    padding: 1rem;
-    font-size: 1.5rem;
-    background-color: gray;
-    color: black;
-    border: solid white 3px;
-    border-radius: 0.5rem;
-}
-
-.inverse-contact-btn:hover {
-    cursor: pointer;
-    background-color: lightgray;
-    border: solid gray 3px;
-}
-
-.inverse-contact-btn:focus {
-    outline-color: #D0312D;
-}
-
-.inverse-contact-btn:active {
-    background-color: #696969;
-    border: solid lightgray 3px;
-}
