--- a/query.style.css
+++ b/query.style.css
@@ -91,3 +91,14 @@
     }
 }
 
+@media only screen and (max-height: 730px) {
+    #about-footer {
+        display: none;
+    }
+}
+
+@media only screen and (max-height: 440px) {
+    .footer {
+        display: none;
+    }
+}
